# the_lab.api

./: .gitignore  LOOP.md  MANIFEST.in  PROMPT.md  PROMPT_problem.md  README.md  REFACTOR_CHECKLIST.md  build-dashboard.sh  improvements.md  index.html  main.py  pyproject.toml  release.md
agent_skills/skills/: lab_api_mcp.py
assets/: index-B4KJPNaG.js  index-BHhYfBzU.css  index-BkfBew38.js  index-CN_wJPS0.css
dashboard/: DESIGN.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: app.tsx  main.tsx
dashboard/src/components/: agent-bar.tsx  chat-panel.tsx  detail-panel.tsx  filter-bar.tsx  json-view.tsx  lightbox.tsx  nav-rail.tsx  progress-ring.tsx  scroll-top.tsx  settings-panel.tsx  suggest-panel.tsx  table-panel.tsx  task-banner.tsx  topbar.tsx  view-tabs.tsx
dashboard/src/lib/: chart-data.ts  colors.ts  fonts.ts  (+8 more)
optimization/: PROMPT.md  PROMPT_problem.md  README.md  arc3_autosolver  baseline.json  gemma_agent.py  lab-optimize-arc.sh  lab-optimize.sh  run_eval.py  run_eval_arc.py
optimization/test_project/: PROMPT.md
optimization/tests/: score_common.py  seed_fixture.py
scripts/: backfill_api_stats.py
the_lab/: PROMPT_api.md  PROMPT_template.md  agent_cli.py  agents.py  app.py  cache.py  cli.py  dashboard.html  deps.py  dev_proxy.py  git_ops.py  messages.py  perf_log.py  prompts.py  queue.py  runner.py  sandbox.py  sandbox_guest.py  schemas.py  stats.py  store.py  token_registry.py  ws.py
the_lab/agent_skills/: mcp.json  settings.json
the_lab/executors/: slurm.py
the_lab/routes/: agents.py  experiments.py  ideas.py  messages.py  operational.py  overview.py  prompts.py  queue.py
the_lab/static/: index.html
(+159 files in other folders)
