[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "the-lab-api"
version = "0.1.0"
description = "Experiment management API for AI-driven research loops"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.52.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.42.0",
    "watchfiles>=1.1.1",
]

[tool.setuptools.packages.find]
include = ["the_lab*"]

[tool.setuptools.package-data]
the_lab = ["static/**/*", "static/*", "agent_skills/**/*", "agent_skills/*", "*.md"]

[project.scripts]
the-lab = "the_lab.cli:main"
the-lab-agent = "the_lab.agent_cli:main"
